# push-swap

./: CMakeLists.txt  Makefile  README.md  checker  mapgen.py  perf.sh
include/: actions.h  checker.h  dlist.h  getinfo.h  pushswap.h
src/: actions.c  algo.c  checker.c  dlist.c  dlst2.c  getactions.c  getlist.c  info.c  pushs.c  pushswap.c  rotate.c  rrotate.c  sorting.c  swaps.c
